// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBody rendered with children should render children 1`] = `
<div
  className="Block Page-Body"
>
  <span>
    Child
  </span>
</div>
`;

exports[`PageBody rendered with className should render with expected class attribute 1`] = `
<div
  className="Block Page-Body Foo"
/>
`;

exports[`PageBody rendered with compClassName should render with expected class attribute 1`] = `
<div
  className="Block"
/>
`;

exports[`PageBody rendered with compClassName should render with expected class attribute 2`] = `
<div
  className="Block  foo"
/>
`;

exports[`PageBody rendered with compClassName should render with expected class attribute 3`] = `
<div
  className="Block page-body foo"
/>
`;

exports[`PageBody rendered with compType should render with expected component 1`] = `
<article
  className="Block Page-Body"
/>
`;

exports[`PageBody rendered with compType should render with expected component 2`] = `
<div
  className="Block Page-Body"
/>
`;

exports[`PageBody rendered with compType should render with expected component 3`] = `
<main
  className="Block Page-Body"
/>
`;

exports[`PageBody rendered with compType should render with expected component 4`] = `
<section
  className="Block Page-Body"
/>
`;

exports[`PageBody rendered with no props should use default props 1`] = `
<div
  className="Block Page-Body"
/>
`;
